--- a/Shop/Content/HomeCss.css
+++ b/Shop/Content/HomeCss.css
@@ -77,8 +77,8 @@ header nav ul li a:hover{
     background-color:aqua;
 }
 #content {
-    margin: 0px auto;
-    padding-top: 80px;
+    margin: 40px auto;
+    padding-top: 0px;
 
 }
 footer {
@@ -88,3 +88,31 @@ footer {
 footer p{
   padding-right:20px;
 }
+
+ul.dropdown li { position: relative; }
+ ul.dropdown,
+ ul.dropdown-inside {
+ list-style-type: none;
+ padding: 0;
+ }
+ ul.dropdown-inside {
+ position: absolute;
+ left: -9999px;
+ }
+ ul.dropdown li.dropdown-top {
+ display: inline;
+ float: left;
+ margin: 0 1px 0 0;
+ }
+ ul.dropdown li.dropdown-top a {
+ padding: 3px 10px 4px;
+ display: block;
+ }
+ ul.dropdown a.dropdown-top { background: #587A9F; }
+ ul.dropdown a.dropdown-top:hover { padding: 2px 10px 5px; background: #3D5E82;}
+ ul.dropdown li.dropdown-top:hover .dropdown-inside {
+ display: block;
+ left: 0;
+ }
+ /*ul.dropdown .dropdown-inside { background: #fff; }
+ ul.dropdown .dropdown-inside a:hover { background: #efefef; }*/
