--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -5,7 +5,14 @@
 @for (int i = 0; i < 5; i++)
 {
     <h2>Index</h2>
+    if (i==2)
+    {
+        @Html.ActionLink("Переход на компьютер", "Computers", "Home");
+        <br />
+        @Html.ActionLink("Переход на компьютер2", "Computers2", "Home")
+    }
     <h3>sdvsdvsv    </h3>
 }
+
 
 
