--- a/Shop/Views/Home/Computers.cshtml
+++ b/Shop/Views/Home/Computers.cshtml
@@ -1,11 +1,34 @@
-﻿@model IEnumerable<Shop.Models.Computers>
+﻿@*@model IEnumerable<Shop.Models.Computers>*@
 
 @{
     ViewBag.Title = "Computers";
+    var options = new AjaxOptions()
+    {
+        UpdateTargetId = "tabledata",
+        Url = Url.Action("OrdersData"),
+        LoadingElementId = "loadingIndicator"
+    };
 }
 
 <h2>Computers</h2>
-<table>
+@using (Ajax.BeginForm(options))
+{
+        <div id="loadingIndicator" style="display:none;">Loading...</div>
+     <table cellpadding="4">
+        <thead>
+            <tr>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Customer</th>
+            </tr>
+        </thead>
+
+        <tbody id="tabledata">
+            @Html.Action("OrdersData", new { id = Model })
+        </tbody>
+
+    </table>
+@*<table>
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Firm)
@@ -32,4 +55,14 @@
             </td>
         </tr>
     }
-</table>
+</table>*@
+    <p>
+        @*При отправке обратного запроса на сервер, в форме будет содержаться поле id которое методом действия будет использоваться для фильтрации данных*@
+        @Html.DropDownList("id", new SelectList(new[] { "All", "HP", "Lenovo" }, (Model ?? "All")))
+        <input type="submit" value="Submit" />
+    </p>
+
+}
+
+@*Ненавязивый JavaScript для выполнения запроса на сервер без полного обновления страницы*@
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
