Добавлена аутентификация пользователей!

--- a/Shop/Views/Home/Computers.cshtml
+++ b/Shop/Views/Home/Computers.cshtml
@@ -61,6 +61,9 @@
         @Html.DropDownList("id", new SelectList(new[] { "All", "HP", "Lenovo" }, (Model ?? "All")))
         <input type="submit" value="Submit" />
     </p>
+    <p>
+          <input type="text" class="form-control"/>
+    </p>
 
 }
 
