--- a/Shop/Content/HomeCss.css
+++ b/Shop/Content/HomeCss.css
@@ -114,5 +114,12 @@ ul.dropdown li { position: relative; }
  display: block;
  left: 0;
  }
+
+ .form-control:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
  /*ul.dropdown .dropdown-inside { background: #fff; }
  ul.dropdown .dropdown-inside a:hover { background: #efefef; }*/
