--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/HomeCss.css")
+    @Styles.Render("~/Content/style.css")
     @*<link href="~/Content/HomeCss.css" rel="stylesheet" type="text/css" />*@
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    @*<script src="~/Scripts/modernizr-2.6.2.js"></script>*@
 </head>
 <body>
     <div id="container_body-content">
@@ -15,53 +16,47 @@
             Контактная информация
         </div>
         <header>
-            
-            <div id="header_vk">
-                <a href="https://vk.com/feed" title="Новости">
-                    <div id="head_v">В </div>
-                    контакте
-                </a>
-            </div>
-            <nav>
-                @*<ul>
-                    <li>@Html.ActionLink("Люди", "Index", "Home") </li>
-                    <li><a href="">сообщества</a></li>
-                    <li><a href="">игры</a></li>
-                    <li><a href="">музыка</a></li>
-                    <li><a href="">помощь</a></li>
-                    <li><a href="">выйти</a></li>
-                </ul>*@
-                <ul class="dropdown">
-                    <li class="dropdown-top">
-                        <a class="dropdown-top" href="/">Британия</a>
-                        <ul class="dropdown-inside">
-                            <li><a href="/">Лондон</a></li>
-                            <li><a href="/">Бирмингем</a></li>
-                            <li><a href="/">Лидс</a></li>
-                            <li><a href="/">Шеффилд</a></li>
-                            <li><a href="/">Манчестер</a></li>
+            <nav class="animenu">
+                <button class="animenu__toggle">
+                    <span class="animenu__toggle__bar"></span>
+                    <span class="animenu__toggle__bar"></span>
+                    <span class="animenu__toggle__bar"></span>
+                </button>
+                <ul class="animenu__nav">
+                    <li>
+                        @Html.ActionLink("Главная", "Index", "Home")
+                    </li>
+                    <li>
+                        <a href="#">Archive</a>
+                        <ul class="animenu__nav__child">
+                            <li>@Html.ActionLink("Переход на компьютер", "Computers", "Home");</li>
+                            <li><a href="">Sub Item 2</a></li>
+                            <li><a href="">Sub Item 3</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Categories</a>
+                        <ul class="animenu__nav__child">
+                            <li><a href="">Sub Item 1</a></li>
+                            <li><a href="">Sub Item 2</a></li>
+                            <li><a href="">Sub Item 3</a></li>
                         </ul>
                     </li>
 
-                    <li class="dropdown-top">
-                        <a class="dropdown-top" href="/">США</a>
-                        <ul class="dropdown-inside">
-                            <li><a href="/">Нью-Йорк</a></li>
-                            <li><a href="/">Лос-Анжелес</a></li>
-                            <li><a href="/">Чикаго</a></li>
-                            <li><a href="/">Хьюстон</a></li>
-                            <li><a href="/">Филадельфия</a></li>
-                            <li><a href="/">Финикс</a></li>
-                            <li><a href="/">Сан-Антонио</a></li>
-                        </ul>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
                     </li>
                     <li>@Html.Partial("_LoginPartial")</li>
-                    </ul>
-</nav>
+                </ul>
+            </nav>
+
 
         </header>
         <section>
-            
+
             <div id="content">
                 @RenderBody()
             </div>
@@ -71,9 +66,10 @@
             <p>&copy; @DateTime.Now.Year - Made by Doctor</p>
         </footer>
     </div>
-
+    <script src="~/Scripts/animenu.js"></script>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     @*<script src="~/Scripts/bootstrap.min.js"></script>*@
+
     @*@Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
