Добавленны bundle для оптимизации
Не все скрипты в бандлах

--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/HomeCss.css")
+    @Styles.Render("~/Content/home.css")
     @Styles.Render("~/Content/style.css")
     @*<link href="~/Content/HomeCss.css" rel="stylesheet" type="text/css" />*@
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@
