--- a/Shop/Content/home.css
+++ b/Shop/Content/home.css
@@ -2,12 +2,15 @@
      margin:0;
 }
 section{
-    margin: 40px auto 0 auto;   
-        width: 790px;
-    height: 700PX;
-    outline: 3px solid #333;
+   margin: 0px auto 0 auto;
 }
-
+.rightmenu{
+    margin-left:15px;
+    outline: 3px solid #333;
+    width: 90px;
+    height:700px;
+    display: block; 
+}
 #container_body-content {
     margin-top:0;
     padding:0px;   
@@ -21,7 +24,10 @@ section{
     background-color:aqua;
 }
 #content {
-    margin: 40px auto;
+        width: 790px;
+    height: 700PX;
+    outline: 3px solid #333;
+    margin: 0px auto;
     padding-top: 0px;
 
 }
@@ -33,3 +39,6 @@ footer p{
   padding-right:20px;
 }
 
+table{
+    margin-top: 30px;
+}
