--- a/Shop/Views/Home/Computers.cshtml
+++ b/Shop/Views/Home/Computers.cshtml
@@ -9,63 +9,36 @@
         LoadingElementId = "loadingIndicator"
     };
 }
-
-<h2>Computers</h2>
-@using (Ajax.BeginForm(options))
-{
-        <div id="loadingIndicator" style="display:none;">Loading...</div>
-     <table cellpadding="4">
-        <thead>
-            <tr>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Customer</th>
-            </tr>
-        </thead>
-
-        <tbody id="tabledata">
-            @Html.Action("OrdersData", new { id = Model })
-        </tbody>
-
-    </table>
-@*<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Firm)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Сharacteristics)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Number)
-        </th>
-        <th></th>
-    </tr>
-    @foreach (var item in Model)
+<div id="content">
+    <h2>Computers</h2>
+    @using (Ajax.BeginForm(options))
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Firm)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Сharacteristics)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Number)
-            </td>
-        </tr>
+        <div id="loadingIndicator" style="display:none;">Loading...</div>
+        <table cellpadding="4">
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Quantity</th>
+                    <th>Customer</th>
+                </tr>
+            </thead>
+
+            <tbody id="tabledata">
+                @Html.Action("OrdersData", new { id = Model })
+            </tbody>
+
+        </table>
+        <p>
+            @*При отправке обратного запроса на сервер, в форме будет содержаться поле id которое методом действия будет использоваться для фильтрации данных*@
+            @Html.DropDownList("id", new SelectList(new[] { "All", "HP", "Lenovo" }, (Model ?? "All")))
+            <input type="submit" value="Submit" />
+        </p>
+        <p>
+            <input type="text" class="form-control" />
+        </p>
+
     }
-</table>*@
-    <p>
-        @*При отправке обратного запроса на сервер, в форме будет содержаться поле id которое методом действия будет использоваться для фильтрации данных*@
-        @Html.DropDownList("id", new SelectList(new[] { "All", "HP", "Lenovo" }, (Model ?? "All")))
-        <input type="submit" value="Submit" />
-    </p>
-    <p>
-          <input type="text" class="form-control"/>
-    </p>
 
-}
-
-@*Ненавязивый JavaScript для выполнения запроса на сервер без полного обновления страницы*@
-<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    @*Ненавязивый JavaScript для выполнения запроса на сервер без полного обновления страницы*@
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+</div>
