--- a/Shop/Views/Home/Computers2.cshtml
+++ b/Shop/Views/Home/Computers2.cshtml
@@ -3,36 +3,42 @@
 @{
     ViewBag.Title = "Computers2";
 }
+
 <h2>Computers2</h2>
+<div class="rightmenu">
+    <nav>
 
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Firm)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Сharacteristics)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Number)
-        </th>
-        <th></th>
-    </tr>
-    @foreach (var item in Model)
-    {
+    </nav>
+</div>
+<div id="content">
+    <table>
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Firm)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Сharacteristics)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Number)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Firm)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Сharacteristics)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Number)
+            </th>
+            <th></th>
         </tr>
-    }
-</table>
-
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Firm)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Сharacteristics)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Number)
+                </td>
+            </tr>
+        }
+    </table>
+</div>
 
 
