--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -1,19 +1,20 @@
 ﻿@{
     ViewBag.Title = "Мой магазин";
 }
-
-@for (int i = 0; i < 5; i++)
-{
-    <h2>Index</h2>
-    if (i==2)
+<div id="content">
+    @for (int i = 0; i < 5; i++)
     {
-        @Html.ActionLink("Переход на компьютер", "Computers", "Home");
-    
+        <h2>Index</h2>
+        if (i == 2)
+        {
+            @Html.ActionLink("Переход на компьютер", "Computers", "Home");
+
         <br />
         @Html.ActionLink("Переход на компьютер2", "Computers2", "Home")
+        }
+        <h3>sdvsdvsv    </h3>
     }
-    <h3>sdvsdvsv    </h3>
-}
+</div>
 
 
 
