--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
         </div>
         <header>
             <nav class="animenu">
-                <button class="animenu__toggle">
+                @*<button class="animenu__toggle">
                     <span class="animenu__toggle__bar"></span>
                     <span class="animenu__toggle__bar"></span>
                     <span class="animenu__toggle__bar"></span>
-                </button>
+                </button>*@
                 <ul class="animenu__nav">
                     <li>
                         @Html.ActionLink("Главная", "Index", "Home")
@@ -57,22 +57,21 @@
         </header>
         <section>
 
-            <div id="content">
+            
                 @RenderBody()
-            </div>
+            
         </section>
         <footer>
             <hr />
             <p>&copy; @DateTime.Now.Year - Made by Doctor</p>
         </footer>
     </div>
-    <script src="~/Scripts/animenu.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     @*<script src="~/Scripts/bootstrap.min.js"></script>*@
-
     @*@Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/animenu.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 </body>
 </html>
 
