--- a/Shop/Views/Home/Computers2.cshtml
+++ b/Shop/Views/Home/Computers2.cshtml
@@ -4,13 +4,21 @@
     ViewBag.Title = "Computers2";
 }
 
-<h2>Computers2</h2>
-<div class="rightmenu">
-    <nav>
 
-    </nav>
-</div>
-<div id="content">
+<nav class="rightmenu">
+    <h1>Navigation</h1>
+
+    <ul>
+        <li><a href="#" title="Lorum ipsum dolor sit amet">Lorem</a></li>
+        <li><a href="#" title="Aliquam tincidunt mauris eu risus">Aliquam</a></li>
+        <li><a href="#" title="Morbi in sem quis dui placerat ornare">Morbi</a></li>
+        <li><a href="#" title="Praesent dapibus, neque id cursus faucibus">Praesent</a></li>
+        <li><a href="#" title="Pellentesque fermentum dolor">Pellentesque</a></li>
+    </ul>
+</nav>
+
+<section class="content">
+    <h2>Computers2</h2>
     <table>
         <tr>
             <th>
@@ -39,6 +47,13 @@
             </tr>
         }
     </table>
-</div>
+</section>
+
+<aside>
+    <h1>Aside</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+    </p>
+</aside>
 
 
