--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/home.css")
+    @Styles.Render("~/Content/normalize.css")
     @Styles.Render("~/Content/style.css")
     @*<link href="~/Content/HomeCss.css" rel="stylesheet" type="text/css" />*@
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@
@@ -55,9 +56,7 @@
 
 
         </header>
-        <section>
-
-            
+        <section class="main">        
                 @RenderBody()
             
         </section>
