--- a/Shop/Content/home.css
+++ b/Shop/Content/home.css
@@ -1,44 +1,65 @@
 ﻿body {
-     margin:0;
+    margin: 0;
 }
-section{
-   margin: 0px auto 0 auto;
+
+.main {
+    margin: 0px auto 0 auto;
+    padding: 10px;
+    display: -moz-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flexbox;
 }
-.rightmenu{
-    margin-left:15px;
-    outline: 3px solid #333;
-    width: 90px;
-    height:700px;
-    display: block; 
+
+.rightmenu {
+    margin: 0 0 0 15px;
+    border: 3px solid #333;
+    width: auto;
+    height: 700px;
+    /*display: block*/
 }
+
 #container_body-content {
-    margin-top:0;
-    padding:0px;   
-   margin:0px;   
-   display: block; 
+    margin-top: 0;
+    padding: 0px;
+    margin: 0px;
+    display: block;
 }
 
 #contact {
     margin-top: 0px;
-    height:40px;
-    background-color:aqua;
+    height: 40px;
+    background-color: aqua;
 }
-#content {
-        width: 790px;
-    height: 700PX;
+
+.content {
+    min-width: 790px;
+    min-height: 700PX;
     outline: 3px solid #333;
-    margin: 0px auto;
-    padding-top: 0px;
-
+    /*margin: 2px auto 0 10px;*/
+    padding: 0 10px 0 10px;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -ms-box-flex: 1;
+    box-flex: 1;
 }
+
+aside {
+    height: auto;
+    width: 180px;
+    padding: 10px;
+    background-color: #C1D652;
+}
+
 footer {
-  margin-top: 0px;
-  text-align: right;
-}
-footer p{
-  padding-right:20px;
+    margin-top: 0px;
+    text-align: right;
 }
 
-table{
+    footer p {
+        padding-right: 20px;
+    }
+
+table {
     margin-top: 30px;
 }
