--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Мой магазин";
 }
-<div id="content">
+<section class="content">
     @for (int i = 0; i < 5; i++)
     {
         <h2>Index</h2>
@@ -14,7 +14,7 @@
         }
         <h3>sdvsdvsv    </h3>
     }
-</div>
+</section>
 
 
 
