--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Мой магазин";
 }
+@Html.Partial("_NavigatMenu")
 <section class="content">
     @for (int i = 0; i < 5; i++)
     {
@@ -15,6 +16,7 @@
         <h3>sdvsdvsv    </h3>
     }
 </section>
+@Html.Partial("_Aside")
 
 
 
