--- a/Shop/Content/home.css
+++ b/Shop/Content/home.css
@@ -10,6 +10,11 @@
     display: -ms-flexbox;
     display: flexbox;
 }
+.product{
+    max-height:90px;
+    max-width:90px;
+    padding:20px;
+}
 
 .rightmenu {
     margin: 0 0 0 15px;
