--- a/Shop/Views/Home/OrdersData.cshtml
+++ b/Shop/Views/Home/OrdersData.cshtml
@@ -4,7 +4,7 @@
 {
     <tr>
         <td>
-            <img class="product" src="@Html.DisplayFor(modelItem => item.ImagesPath)" />  @*grid.Column(header: "Логотип", format: , canSort:false),*@
+            <img class="product img-rounded" src="@Html.DisplayFor(modelItem => item.ImagesPath)" />  @*grid.Column(header: "Логотип", format: , canSort:false),*@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Firm)
