--- a/Shop/Views/Home/Index.cshtml
+++ b/Shop/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewBag.Title = "Мой магазин";
 }
 @Html.Partial("_NavigatMenu")
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 <section class="content">
     @for (int i = 0; i < 5; i++)
     {
@@ -10,11 +13,62 @@
         {
             @Html.ActionLink("Переход на компьютер", "Computers", "Home");
 
-        <br />
-        @Html.ActionLink("Переход на компьютер2", "Computers2", "Home")
+            <br />
+            @Html.ActionLink("Переход на компьютер2", "Computers2", "Home")
         }
         <h3>sdvsdvsv    </h3>
     }
+    <div class="row">
+        <div class="col-md-5">
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default" id="panel1">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-target="#collapseOne"
+                               href="#collapseOne">
+                                Collapsible Group Item #1
+                            </a>
+                        </h4>
+
+                    </div>
+                    <div id="collapseOne" class="panel-collapse collapse in">
+                        <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title ">Panel 1</h3>
+                    <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+                </div>
+                    <div class="panel-body">
+                        Founded in 1892 and headquartered in Fairfield, CT, LexisNexis Corporate Affiliations
+                        is a technology and financial services company.
+                        The company offers products and services ranging from aircraft engines, power generation,
+                        water processing, and house
+                    </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+    jQuery(function ($) {
+        $('.panel-heading span.clickable').on("click", function (e) {
+            if ($(this).hasClass('panel-collapsed')) {
+                // expand the panel
+                $(this).parents('.panel').find('.panel-body').slideDown();
+                $(this).removeClass('panel-collapsed');
+                $(this).find('i').removeClass('glyphicon-chevron-down').addClass('glyphicon-chevron-up');
+            }
+            else {
+                // collapse the panel
+                $(this).parents('.panel').find('.panel-body').slideUp();
+                $(this).addClass('panel-collapsed');
+                $(this).find('i').removeClass('glyphicon-chevron-up').addClass('glyphicon-chevron-down');
+            }
+        });
+    });
+    </script>
 </section>
 @Html.Partial("_Aside")
 
