--- a/Shop/Views/Shared/_NavigatMenu.cshtml
+++ b/Shop/Views/Shared/_NavigatMenu.cshtml
@@ -1,4 +1,5 @@
 ﻿<nav class="rightmenu">
+
     <h1>Navigation</h1>
 
     <ul>
@@ -11,24 +12,31 @@
     <br>
     <h2>Simple Collapsible</h2>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
-    <div id="demo" class="collapse checkbox" style="max-width:90px">
-            @using (Html.BeginForm("Home", "index"))
-            {
-                @:Флажок2
-                @Html.CheckBox("myCheckBox", false)
-                <br />
-                @:Флажок3
-                @Html.CheckBox("myCheckBox", false)
-                <br />
+    <div id="demo" class="collapse checkbox" style="max-width:90px; margin-left:20px; ">
+        @using (Html.BeginForm())
+        {
 
-                @:Флажок
-                @Html.CheckBox("myCheckBox", false)
-                <br />
+            @Html.CheckBox("mycheck", false) //, htmlAttributes: new { name = "mycheck" }  @*"Comput","Home"*@
+            @:Флажок2
+            <br />
+
+            @Html.CheckBox("myCheckBox", false)
+            @:Флажок3
+            <br />
+            @Html.CheckBox("myCheckBox", false)
+            @:Флажок4
+            <br />
+             <input type="checkbox" checked="@ViewBag.ApplyDiscount" name="checbox1" />
+            @:Скидка:
+            <br />
+            <input type="submit" value="Submit" />
 
 
-            }
+        }
     </div>
     <br />
 
 
 </nav>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
