--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <a href="#">Archive</a>
                         <ul class="animenu__nav__child">
                             <li>@Html.ActionLink("Переход на компьютер", "Computers", "Home");</li>
-                            <li><a href="">Sub Item 2</a></li>
+                            <li><a href="">@Html.ActionLink("Переход на компьютер3", "Computers3", "Home")</a></li>
                             <li><a href="">Sub Item 3</a></li>
                         </ul>
                     </li>
