--- a/Shop/Views/Account/ExternalLoginFailure.cshtml
+++ b/Shop/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Ошибка при входе";
+    ViewBag.Title = "Login Failure";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Не удалось войти через службу.</h3>
-</hgroup>
+<h2>@ViewBag.Title.</h2>
+<h3 class="text-error">Unsuccessful login with service.</h3>
