Внешний вид меню

--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -46,11 +46,11 @@
                         @Html.ActionLink("Главная", "Index", "Home")
                     </li>
                     <li>
-                        <a href="#">Archive</a>
+                        <a href="#">Пробные страницы</a>
                         <ul class="animenu__nav__child">
-                            <li>@Html.ActionLink("Переход на компьютер", "Computers", "Home");</li>
-                            <li><a href="">@Html.ActionLink("Переход на компьютер3", "Computers3", "Home")</a></li>
-                            <li><a href="">Sub Item 3</a></li>
+                            <li>@Html.ActionLink("Фильтрация таблицы Ajax", "Computers", "Home")</li>
+                            <li>@Html.ActionLink("Проверка чекбоксов", "Computers2", "Home")</li>
+                            <li>@Html.ActionLink("Фильтрация из меню", "Computers3", "Home")</li>
                         </ul>
                     </li>
                     <li>
