--- a/Shop/Content/home.css
+++ b/Shop/Content/home.css
@@ -10,9 +10,11 @@
     display: flexbox;
 }
 .product{
-    max-height:90px;
-    max-width:90px;
-    padding:20px;
+    max-width:100px;
+    padding:0 20px 10px;
+}
+tr td:first-child{
+    width:150px;
 }
 
 .rightmenu {
