--- a/Shop/Content/home.css
+++ b/Shop/Content/home.css
@@ -25,17 +25,22 @@ tr td:first-child{
     /*display: block*/
 }
 
-#container_body-content {
-    margin-top: 0;
-    padding: 0px;
-    margin: 0px;
-    display: block;
-}
+.body-content {
 
-#contact {
+}
+.contact {
     margin-top: 0px;
     height: 40px;
-    background-color: aqua;
+    background-color: bisque;
+     vertical-align:middle;
+}
+.contact img{
+    float:left;
+    height:50px;
+    margin: 0 10px;
+}
+.contact span{
+    float:left;
 }
 
 .content {
@@ -49,7 +54,6 @@ tr td:first-child{
     -ms-box-flex: 1;
     box-flex: 1;
 }
-
 aside {
     height: auto;
     width: 180px;
@@ -62,10 +66,19 @@ footer {
     text-align: right;
 }
 
-    footer p {
-        padding-right: 20px;
-    }
+footer p {
+    padding-right: 20px;
+}
 
 table {
     margin-top: 30px;
+}
+.layout-positioner{
+    width:1100px;
+    margin:0 auto;
+}
+.layout-positioner:after{
+    content:'';
+    clear:both;
+    display:table;
 }
