Добавлена страница с выводом в WebGrid

--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                             <li>@Html.ActionLink("Фильтрация таблицы Ajax", "Computers", "Home")</li>
                             <li>@Html.ActionLink("Проверка чекбоксов", "Computers2", "Home")</li>
                             <li>@Html.ActionLink("Фильтрация из меню", "Computers3", "Home")</li>
+                            <li>@Html.ActionLink("ComputersWebGrid", "ComputersWebGrid", "Home")</li>
                         </ul>
                     </li>
                     <li>
